2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-util.el (mode-info-titles-type): New constant.
	(mode-info-method-next): New function.

	* mi-ruby.el (mode-info-ruby-titles): Refer
	`mode-info-title-types' as its type.

	* mi-perl.el (mode-info-perl-titles): Refer
	`mode-info-title-types' as its type.

	* mi-octave.el (mode-info-octave-titles): Refer
	`mode-info-title-types' as its type.

	* mi-libc.el (mode-info-libc-titles): Refer
	`mode-info-title-types' as its type.

	* mi-index.el (mode-info-make-index): Follow the type change of
	`mode-info-*-titles'.
	(mode-info-search-info-files): Search files have `.info' suffix.

	* mi-emacs.el: New file.

	* mi-elisp.el (toplevel): Add autoload for
	`find-function-search-for-symbol'.  Remove useless autoloads.
	(mode-info-elisp-titles): Change default value.  Refer
	`mode-info-title-types' as its type.
	(mode-info-elisp-function-document-1): Use
	`find-function-search-for-symbol' instead
	of`find-function-noselect'.
	(mode-info-elisp-variable-document-1): Removed.
	(variable-document): Not call the above function.
	(read-tag, find-tag-noselect): Reimplemented.
	(mode-info-elisp-add-function-button): Relax the regular
	expression to detect other buttons.
	(mode-info-elisp-add-variable-button): Ditto.

	* mi-config.el (toplevel): Add autoloads.
	(mode-info-with-help-buffer): New macro.
	(mode-info-elisp-add-function-button): Use the above macro.
	(mode-info-elisp-add-variable-button): Ditto.
	(mode-info-elisp-add-command-button): New advice.
	(mode-info-emacs-command-node): New option.
	(mode-info-emacs-command-node): New advice.

2002-07-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.0.3.

	* mode-info.el (toplevel): Add autoload for functions defined in
	etags.el.
	(function-document, variable-document): Changed the spec of its
	return value.
	(mode-info-show-document): Follow the above change.
	(mode-info-goto-info-entry-1): Ditto.
	(read-tag, find-tag-noselect, find-tag-internal): New method.